[project]
name = "tobaccotown"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "customtkinter==5.2.2",
    "pandas>=2.3.3",
    "playwright>=1.60.0",
    "ruff>=0.15.20",
    "ty>=0.0.55",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]
